# eext-simulation-with-simulide

./: .edaignore  .gitignore  .prettierignore  .prettierrc.js  CMakeLists.txt  README.md  build-wasm.bat  eslint.config.mjs  extension.json  package-lock.json  package.json  serve.py  start-server.bat  test.html
simulide_to_wasm/: CMakeLists.txt  README.md  build-wasm.bat  build-wasm.sh  start-server.sh
simulide_to_wasm/config/data/: dig_pot.xml
simulide_to_wasm/config/data/ICs/74HC4511/: 74HC4511.sim1
simulide_to_wasm/src/: index.ts  server.cpp
simulide_to_wasm/src/cirSim/include/: circmatrix.h  matrixsolver.h
simulide_to_wasm/src/cirSim/include/CircuitElm/e-elements/: e-node.h
simulide_to_wasm/src/cirSim/include/CircuitElm/e-elements/active/: e-diode.h  e-mosfet.h
simulide_to_wasm/src/cirSim/include/CircuitElm/e-elements/passive/: e-coil.h
simulide_to_wasm/src/cirSim/include/CircuitElm/elements/: circuit.h  component.h  connector.h  dialed.h  iopin.h  label.h  node.h
simulide_to_wasm/src/cirSim/include/CircuitElm/elements/components/: comp2pin.h  custombutton.h  linkedComponent.h  wire.h
simulide_to_wasm/src/cirSim/include/CircuitElm/elements/components/active/: diac.h  diode.h  mux_analog.h  scr.h  volt_reg.h
simulide_to_wasm/src/cirSim/include/CircuitElm/elements/components/logic/: bcdto7s.h  dac.h  demux.h  flipflopjk.h  flipfloprs.h  gate_and.h  gate_xor.h  latchd.h  mux.h  sim_adc.h
simulide_to_wasm/src/cirSim/include/CircuitElm/elements/components/meters/: ammeter.h  circularBuffer.h  probe.h
simulide_to_wasm/src/cirSim/include/CircuitElm/elements/components/micro/: ds18b20.h  sr04.h
simulide_to_wasm/src/cirSim/include/CircuitElm/elements/components/other/: connbase.h  socket.h
simulide_to_wasm/src/cirSim/include/CircuitElm/elements/components/outputs/: audio_out.h
simulide_to_wasm/src/cirSim/include/CircuitElm/elements/components/sources/: battery.h  clock-base.h  clock.h  currsource.h  ground.h  rail.h  varsource.h
simulide_to_wasm/src/cirSim/include/CircuitElm/elements/components/switches/: relay.h
simulide_to_wasm/src/cirSim/include/CircuitElm/elements/subcircuits/: board.h  chip.h  logicsubc.h  shield.h  subpackage.h
simulide_to_wasm/src/cirSim/include/CircuitElm/properties/: boolProp.h
simulide_to_wasm/src/cirSim/include/memory/: memdata.h
simulide_to_wasm/src/cirSim/src/: circmatrix.cpp  matrixsolver.cpp
simulide_to_wasm/src/cirSim/src/CircuitElm/e-elements/: e-node.cpp  e-pin.cpp
simulide_to_wasm/src/cirSim/src/CircuitElm/e-elements/active/: e-bjt.cpp
simulide_to_wasm/src/cirSim/src/CircuitElm/e-elements/passive/: e-reactive.cpp
simulide_to_wasm/src/cirSim/src/CircuitElm/elements/: connector.cpp  iopin.cpp  itemlibrary.cpp  linkable.cpp
simulide_to_wasm/src/cirSim/src/CircuitElm/elements/components/: comp2pin.cpp  linkedComponent.cpp  logicFamily.cpp  logiccomponent.cpp
simulide_to_wasm/src/cirSim/src/CircuitElm/elements/components/active/: diac.cpp  diode.cpp  mux_analog.cpp  op_amp.cpp  scr.cpp
simulide_to_wasm/src/cirSim/src/CircuitElm/elements/components/logic/: bcdto7s.cpp  bincounter.cpp  buffer.cpp  dac.cpp  flipflopd.cpp  flipfloprs.cpp  flipflopt.cpp  fulladder.cpp  function.cpp  gate_xor.cpp  latchd.cpp  lm555.cpp  sevensegment_bcd.cpp  shiftreg.cpp  sim_adc.cpp
simulide_to_wasm/src/cirSim/src/CircuitElm/elements/components/micro/: dht22.cpp  ds18b20.cpp
simulide_to_wasm/src/cirSim/src/CircuitElm/elements/components/other/: connbase.cpp  tunnel.cpp
simulide_to_wasm/src/cirSim/src/CircuitElm/elements/components/outputs/: audio_out.cpp
simulide_to_wasm/src/cirSim/src/CircuitElm/elements/components/sources/: battery.cpp  clock-base.cpp  clock.cpp  currsource.cpp  fixedvolt.cpp
simulide_to_wasm/src/cirSim/src/CircuitElm/elements/components/switches/: keypad.cpp  relay.cpp  switch.cpp  switchdip.cpp
simulide_to_wasm/src/cirSim/src/CircuitElm/elements/subcircuits/: board.cpp  chip.cpp  logicsubc.cpp  packagepin.cpp  shield.cpp
simulide_to_wasm/src/cirSim/src/CircuitElm/elmData/: dataChannel.cpp
simulide_to_wasm/src/cirSim/src/CircuitElm/properties/: comProperty.cpp  strBaseProp.cpp  stringProp.cpp
simulide_to_wasm/src/cirSim/src/memory/: memdata.cpp
simulide_to_wasm/src/public/include/: pch.h
src/cirSim/src/: CMakeLists.txt  simulator.cpp
src/cirSim/src/CircuitElm/e-elements/: analogclock.cpp  e-clocked_device.cpp  e-element.cpp
src/cirSim/src/CircuitElm/e-elements/active/: e-diode.cpp  e-mosfet.cpp
src/cirSim/src/CircuitElm/e-elements/outputs/: e-led.cpp
src/cirSim/src/CircuitElm/e-elements/passive/: e-coil.cpp  e-resistor.cpp
src/cirSim/src/CircuitElm/elements/: circuit.cpp  compbase.cpp  component.cpp  dialed.cpp  ioport.cpp  node.cpp  pin.cpp  updatable.cpp
src/cirSim/src/CircuitElm/elements/components/: iocomponent.cpp  wire.cpp
src/cirSim/src/CircuitElm/elements/components/active/: BJT.cpp  mosfet.cpp  triac.cpp  volt_reg.cpp  zener.cpp
src/cirSim/src/CircuitElm/elements/components/logic/: bcdbase.cpp  bcdtodec.cpp  bus.cpp  dectobcd.cpp  demux.cpp  dynamic_memory.cpp  flipflopbase.cpp  flipflopjk.cpp  gate.cpp  gate_and.cpp  gate_or.cpp  mux.cpp
src/cirSim/src/CircuitElm/elements/components/meters/: ammeter.cpp  meter.cpp  probe.cpp
src/cirSim/src/CircuitElm/elements/components/micro/: ds1621.cpp  sr04.cpp
src/cirSim/src/CircuitElm/elements/components/other/: socket.cpp
src/cirSim/src/CircuitElm/elements/components/outputs/: lamp.cpp
src/cirSim/src/CircuitElm/elements/components/outputs/leds/: ledmatrix.cpp  ledsmd.cpp
src/cirSim/src/CircuitElm/elements/components/sources/: csource.cpp  ground.cpp  rail.cpp  varsource.cpp  voltsource.cpp  wavegen.cpp
src/cirSim/src/CircuitElm/elements/components/switches/: mech_contact.cpp  push.cpp  push_base.cpp  switch_base.cpp
src/cirSim/src/CircuitElm/elements/componentselector/: componentselector.cpp
src/cirSim/src/CircuitElm/elements/subcircuits/: module.cpp  subcircuit.cpp  subpackage.cpp
src/cirSim/src/CircuitElm/properties/: boolProp.cpp  numProp.cpp  utils.cpp
src/cirSim/src/memory/: memtable.cpp
(+135 files in other folders)
